# cozystarter

./: Cargo.toml  LICENSE  README.md  compose.yml
page/: config.toml
src/: app.rs  db.rs  lib.rs
src/handlers/: home.rs
template/: Cargo.toml  LICENSE-AGPL-3.0-or-later  LICENSE-Apach-2.0
template/src/: config.rs
template/templates/: home.html
templates/: layout.html
