[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
minijinja = { version = "2.0.2", features = ["loader"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "tls-rustls"] }
tokio = { version = "1.38.0", features = ["full"] }
