[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
config = { version = "0.14.0", features = ["toml"], default-features = false }
minijinja = { version = "2.0.2", features = ["loader"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "tls-rustls"] }
tokio = { version = "1.38.0", features = ["full"] }
